# learn_sintax

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/c++20/: CMakeLists.txt  main.cpp  math.cppm
src/c++20/2_space_ship/: CMakeLists.txt  main.cpp
src/c++20/3_overloading_with_spaceship/: CMakeLists.txt  main.cpp  vector3.cppm
src/c++20/4_function_pointer/: CMakeLists.txt  inputManager.cpp  inputManager.cppm  main.cpp
src/c++thread/1_command_queue/: CMakeLists.txt  main.cpp  taskmanager.cpp  taskmanager.hpp
src/c++thread/2_thread_pool/: CMakeLists.txt  main.cpp  threadPool.cpp  threadPool.hpp
